...
        return label
    }()
    
    lazy var directionsButton: UIButton = {
        
        let button = UIButton(type: .system)
        button.setTitle("Get Directions", for: .normal)
        button.addTarget(self, action: #selector(getDirections), for: .touchUpInside)
        button.setTitleColor(.black, for: .normal)
        button.layer.borderWidth = 2
        button.layer.cornerRadius = 5.0
        return button
        
...
