...
        addressLabel.numberOfLines = 0
        addressLabel.text = address
        addressLabel.textColor = .black
        
        let button = UIButton()
        button.addTarget(self, action: #selector(goToDirectionTable), for: .touchUpInside)
        button.setTitle("Get List Of Directions", for: .normal)
        button.setTitleColor(.black, for: .normal)
        button.layer.borderWidth = 2
        button.layer.cornerRadius = 5.0
 
        let stack = UIStackView(arrangedSubviews: [namelabel, addressLabel])
    
...
