//
//  DepVidUITests.swift
//  DepVidUITests
//
//  Created by Michael Doroff on 4/30/24.
//

import XCTest

final class DepVidUITests: XCTestCase {

    @MainActor override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    @MainActor func testExample() throws {
        // UI tests must launch the application that they test.

        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        setupSnapshot(app)
        app.launch()
        
        snapshot("01LoginScreen", timeWaitingForIdle: 15)
        
        app.otherElements["Sophia Lin Ott, PsyD"].tap()
        
        snapshot("02SelectionScreen")
        
        app.buttons["Get Directions"].tap()
        
        snapshot("03SelectedMapScreen")

        app.buttons["Get List Of Directions"].tap()
        
        snapshot("04DirectionsScreen")
                
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
                        // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
